--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,25 +12,25 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/buttonSimple"
+            android:id="@+id/btn_Simple"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/simple_direction" />
 
         <Button
-            android:id="@+id/buttonTransit"
+            android:id="@+id/btn_Transit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/transit_direction" />
 
         <Button
-            android:id="@+id/buttonAlternative"
+            android:id="@+id/btn_Alternative"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/alternative_direction" />
 
         <Button
-            android:id="@+id/buttonWaypoints"
+            android:id="@+id/btn_Waypoints"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/waypoints_direction" />
