--- a/app/src/main/res/layout/activity_transit_direction.xml
+++ b/app/src/main/res/layout/activity_transit_direction.xml
@@ -6,14 +6,14 @@
     tools:context=".TransitDirectionActivity">
 
     <fragment
-        android:id="@+id/maps"
+        android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
     <Button
-        android:id="@+id/buttonRequestDirection"
+        android:id="@+id/btn_request_direction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
